Fix: spring-boot-starter-web was missing